@@ -1,3 +1,8 @@
+2008-04-30  Per Bothner  <per@bothner.com>
+
+	* lang/Lambda.java (rewriteBody): Use new setCoercedReturnType
+	method in LambdaExp.java.
+
 2008-02-17  Per Bothner  <per@bothner.com>
 
 	* lang/Translator.java (rewrite): If the location is in a field
